--- a/frontend/src/app/components/user-header/header.html
+++ b/frontend/src/app/components/user-header/header.html
@@ -21,7 +21,7 @@
   }
 </mat-card-header>
 
-<button matIconButton [matMenuTriggerFor]="menu" class="menu">
+<button matIconButton [matMenuTriggerRestoreFocus]="false" [matMenuTriggerFor]="menu" class="menu">
   <mat-icon>more_vert</mat-icon>
 </button>
 
