--- a/frontend/src/app/pages/admin/admin-page.html
+++ b/frontend/src/app/pages/admin/admin-page.html
@@ -1,26 +1,17 @@
-<mat-tab-group>
-  <mat-tab>
+<mat-tab-group [selectedKey]="activeTab" (selectedTabChange)="onTabChange($event)">
+  <mat-tab-keyed [tabKey]="AdminPageTab.Roles">
     <ng-template mat-tab-label>
       <mat-icon fontSet="material-symbols-outlined">person_shield</mat-icon>
       Roles
     </ng-template>
     <roles-list />
-  </mat-tab>
+  </mat-tab-keyed>
 
-  <mat-tab>
+  <mat-tab-keyed [tabKey]="AdminPageTab.Reports">
     <ng-template mat-tab-label>
       <mat-icon fontSet="material-symbols-outlined">flag</mat-icon>
       reports
     </ng-template>
-    Content 2
-  </mat-tab>
-
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon class="example-tab-icon">thumb_up</mat-icon>
-      Third
-    </ng-template>
-
-    Content 3
-  </mat-tab>
+    <reports-list />
+  </mat-tab-keyed>
 </mat-tab-group>
